# OpenCL

./: .gitignore  CMakeLists.txt  ambient_occlusion.cc  copy_benchmark.cc  example.cc
cmake/: FindOpenCL.cmake
core/: buffer.cc  common.h  context.cc  context.h  error.cc  kernel.cc  platform.cc  platform.h  util.cc  util.h
examples/: ambient_occlusion.cc  device_info.cc  example.cc
kernels/: add_numbers.cl  ao.cl  bitonic_sort.cl  kernels.cl
shim/: shim_begin.h  shim_end.h
